# pysubs

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  coverage.json  entrypoint.sh  pyproject.toml
.github/workflows/: python-app.yml
pysubs/: main.py
pysubs-cloud-functions/: .firebaserc  firestore.indexes.json
pysubs-cloud-functions/functions/: index.js
pysubs/dal/: datastore_models.py  firestore.py
pysubs/exceptions/: awss3.py  firestore.py  media.py  youtube.py
pysubs/interfaces/: asr.py  datastore.py  media.py
pysubs/utils/: __init__.py  auth.py  awss3.py  constants.py  conversion.py  ffmpeg_utils.py  file_helper.py  models.py  pysubs_manager.py  settings.py  transcriber.py  video.py
pysubs/utils/exceptions/: models.py
pysubs/utils/interfaces/: asr.py  media.py
pysubs/utils/media/: file.py  youtube.py
tests/: conftest.py  mock_functions.py  test_media_file.py  test_media_youtube.py  test_py_subs_manager.py  test_pysubs_manager.py  test_settings.py  test_video.py
